changed to planet earth

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <body>
    <h1>Hello Universe</h1>
 
-   <h2>Welcome to my site!</h2>
+   <h2>Welcome planet earth</h2>
 
 <!-- image of a duck -->
 
